--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,38 @@
 body {
   background-color: #eae7dc;
+  font-family: "Roboto", sans-serif;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+}
+
+/* Style the links inside the navigation bar */
+nav button {
+  background-color: #eae7dc;
+  border-color: #d8c3af;
+  border-radius: 4px;
+  border-style: solid;
+  border-width: thin;
+  color: #8e8d8a;
+  font-family: "Roboto", sans-serif;
+  font-size: 15px;
+  margin-top: 20px;
+  margin-left: 5px;
+  margin-right: 5px;
+  padding: 10px;
+  width: 120px;
+}
+
+nav button:hover {
+  background-color: #d8c3af;
+  color: black;
+}
+
+nav button.active {
+  background-color: #d8c3af;
+  color: black;
 }
